--- a/Acme-Conference/pom.xml
+++ b/Acme-Conference/pom.xml
@@ -11,8 +11,8 @@
 
 	<!-- Artifact identification and properties -->
 
-	<groupId>Design-and-Testing</groupId>
-	<artifactId>Sample-Project</artifactId>
+	<groupId>DP1-Summer</groupId>
+	<artifactId>Acme-Conference</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 
@@ -22,8 +22,8 @@
 
 	<!-- Indexing information -->
 
-	<name>Sample Project</name>
-	<url>http://www.sample-project.com</url>
+	<name>Acme Conference</name>
+	<url>http://www.Acme-Conference.com</url>
 
 	<!-- Build commands -->
 
