--- a/Acme-Conference/pom.xml
+++ b/Acme-Conference/pom.xml
@@ -315,5 +315,5 @@
 
 	</dependencies>
 
-	<description>This system allows people share their favourite Shouts.</description>
+	<description>This system helps you with the management of your Conferences</description>
 </project> 
