--- a/Acme-Conference/pom.xml
+++ b/Acme-Conference/pom.xml
@@ -22,7 +22,7 @@
 
 	<!-- Indexing information -->
 
-	<name>Acme Conference</name>
+	<name>Acme-Conference</name>
 	<url>http://www.Acme-Conference.com</url>
 
 	<!-- Build commands -->
